--- a/LifeControl.xaml
+++ b/LifeControl.xaml
@@ -19,8 +19,8 @@
             <Setter Property="Background" Value="Transparent"/>
         </Style>
     </UserControl.Resources>
-
-    <Grid Name="GridLifeButton" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2"  Background="Transparent" BorderBrush="Orange" BorderThickness="1">
+	<!--BorderThickness="1" BorderBrush="{ThemeResource PlayerColorBrush}"-->
+	<Grid Name="GridLifeButton" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2"  Background="Transparent" CornerRadius="10" Margin="2" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
