--- a/LifeControl.xaml
+++ b/LifeControl.xaml
@@ -18,48 +18,48 @@
             <Setter Property="VerticalAlignment" Value="Stretch"/>
             <Setter Property="Background" Value="Transparent"/>
         </Style>
+		<Style x:Key="TextStyle" TargetType="TextBlock">
+			<Setter Property="Foreground" Value="{StaticResource PlayerColorBrush}" />
+		</Style>
     </UserControl.Resources>
 	<!--BorderThickness="1" BorderBrush="{ThemeResource PlayerColorBrush}"-->
 	<Grid Name="GridLifeButton" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2"  Background="Transparent" CornerRadius="10" Margin="2" >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-        </Grid.ColumnDefinitions>
+			<ColumnDefinition Width="1*"/>
+			<ColumnDefinition Width="1*"/>
+			<ColumnDefinition Width="1*"/>
+		</Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="9*"/>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
-        <Viewbox Grid.Column="0" Stretch="Fill" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" Grid.RowSpan="2">
-            
-            <RepeatButton Name="BtnDecreaseLife" 
-                          Style="{StaticResource ButtonStyle}"  
-                          Delay="500" Interval="100"                            
-                          Click="BtnDecreaseLife_Click_1"
-                          Content="2">
-            </RepeatButton>
+        <Viewbox Grid.RowSpan="2" Grid.ColumnSpan="3" Stretch="Fill" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0">
+			<TextBlock x:Name="TextblockLife" Foreground="{StaticResource PlayerColorBrush}" Text="20">				
+			</TextBlock>            
         </Viewbox>
 
 
-        <Viewbox Grid.Column="1" Stretch="Fill" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" Grid.RowSpan="2" >
 
-            <RepeatButton Name="BtnIncreaseLife" 
+		<RepeatButton Grid.Row="0"  Grid.ColumnSpan="3"
+					Name="BtnIncreaseLife" 
                     Style="{StaticResource ButtonStyle}"     
                           Delay="500" Interval="100"
-                          Click="BtnIncreaseLife_Click"
-                    Content="0" > 
-            </RepeatButton>              
-             
+                          Click="BtnIncreaseLife_Click">
+		</RepeatButton>
+
+		<RepeatButton Grid.Row="1"  Grid.ColumnSpan="3"
+						Name="BtnDecreaseLife" 
+						Style="{StaticResource ButtonStyle}"  
+						Delay="500" Interval="100"                            
+						Click="BtnDecreaseLife_Click_1">
+		</RepeatButton>
+		<Viewbox Grid.Row="1" Grid.Column="0">
+			<TextBlock Margin="-5,5,4,-5" Foreground="WhiteSmoke"> - </TextBlock>
         </Viewbox>
 
-        <Viewbox Grid.Row="1" Grid.Column="0">
-            <TextBlock HorizontalAlignment="Left"  
-                       Foreground="White"> - </TextBlock>
-        </Viewbox>
-
-        <Viewbox Grid.Row="1" Grid.Column="2">
-            <TextBlock HorizontalAlignment="Left"  
-                       Foreground="White"> + </TextBlock>
+        <Viewbox Grid.Row="0" Grid.Column="0">
+			<TextBlock Margin="-5,-5,4,6" Foreground="WhiteSmoke"> + </TextBlock>
         </Viewbox>
 
     </Grid>
